# cmusic

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
src/audio/: audio_pipe.cpp  constants.h  data_generation.cpp  data_generation.h  ftt_processor.cpp  ftt_processor.h  globals.cpp
src/core/: main.cpp
src/rendering/: screen_loop.cpp  timer.h
